<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".contact_view">
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:padding="2dp"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

    </TextView>

    <GridLayout
        android:id="@+id/grd_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="4">

        <ImageView
            android:id="@+id/imageprofile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:src="@drawable/contactperson">

        </ImageView>

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingLeft="15dp"
            android:text="@string/yournumber">

        </TextView>

        <TextView
            android:id="@+id/num_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingLeft="15dp"
            android:text="@string/number">

        </TextView>

        <TextView
            android:id="@+id/posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingLeft="15dp"
            android:text="@string/posts">

        </TextView>

        <TextView
            android:id="@+id/num_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingLeft="15dp"
            android:text="@string/number">

        </TextView>

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingLeft="15dp"
            android:text="@string/followers">

        </TextView>

        <TextView
            android:id="@+id/num_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:paddingLeft="15dp"
            android:text="100">

        </TextView>

        <Button
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/call">

        </Button>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:text="@string/name">

        </TextView>
    </GridLayout>
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grd_card"
        android:background="@color/pink"
        android:text="@string/welcometext"
        android:gravity="center">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/welcome_text"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/like"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/like">

        </TextView>

        <TextView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/share">

        </TextView>

        <TextView
            android:id="@+id/comment"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment">

        </TextView>
    </LinearLayout>

</RelativeLayout>