<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informationprofile">

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/entername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">
    </EditText>

    <EditText
        android:id="@+id/enter_phone"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:hint="@string/enterphone"
        app:layout_constraintTop_toBottomOf="@id/enter_name"
        app:layout_constraintStart_toStartOf="@id/enter_name"
        app:layout_constraintEnd_toEndOf="@id/enter_name"
        android:layout_marginTop="50dp">
    </EditText>
    <EditText
        android:id="@+id/enter_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrbirth"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/enter_phone"
        app:layout_constraintStart_toStartOf="@id/enter_phone"
        app:layout_constraintEnd_toEndOf="@id/enter_phone"
        android:layout_marginTop="50dp">
    </EditText>
    <EditText
        android:id="@+id/enter_numofpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/entrposts"
        app:layout_constraintTop_toBottomOf="@id/enter_birth"
        app:layout_constraintStart_toStartOf="@id/enter_birth"
        app:layout_constraintEnd_toEndOf="@id/enter_birth"
        android:layout_marginTop="50dp">
    </EditText>
    <EditText
        android:id="@+id/enter_numoffollower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enterfollowers"
        app:layout_constraintTop_toBottomOf="@id/enter_numofpost"
        app:layout_constraintStart_toStartOf="@id/enter_numofpost"
        app:layout_constraintEnd_toEndOf="@id/enter_numofpost"
        android:layout_marginTop="50dp">
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/enter_numoffollower"
        app:layout_constraintStart_toStartOf="@id/enter_numoffollower"
        app:layout_constraintEnd_toEndOf="@id/enter_numoffollower"
        android:layout_marginTop="50dp">

    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>